Fix pre wrapping for long lines

--- a/assets/bulma.sass
+++ b/assets/bulma.sass
@@ -20,6 +20,12 @@ $footer-padding: 2rem
 @import "sass/layout/footer.sass"
 @import "sass/layout/section.sass"
 
+/* bulma fixes */
+
+pre
+  white-space: pre-wrap
+
+
 /* own custom elements */
 .icon
   align-items: center
